Thu Sep  1 09:57:34 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/token.c: read data before handling it

Thu Sep  1 09:56:18 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsthread.h src/tds/win_mutex.c: add TDS_MUTEX_TRYLOCK

Thu Sep  1 09:53:09 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac include/replacements.h src/replacements/Makefile.am:
	* src/replacements/socketpair.c:
	- implement socketpair where no available

Thu Aug 18 13:42:04 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c: silly optimization

Wed Aug 17 15:23:28 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsodbc.h src/odbc/odbc_util.c src/tds/query.c:
	- support new data types for tds 7.3

Wed Aug 17 15:21:15 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/genparams.c: improve test for binary

Wed Aug 17 11:11:38 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/convert_tds2sql.c src/odbc/odbc_util.c:
	* src/odbc/sql2tds.c:
	- use DATETIMEALL to avoid precision lose converting to/from ODBC
	  date/time

Tue Aug 16 09:04:38 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/error.c src/odbc/odbc.c:
	- mark last error on odbc_errs_add

Fri Aug 12 18:40:15 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac: enable SSPI by default on Windows

Fri Aug 12 18:38:45 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/config.c src/tds/gssapi.c src/tds/mem.c:
	- add Kerberos realm parameter to connection

Fri Aug 12 15:49:18 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/describecol.c:
	* src/odbc/unittests/describecol.in:
	- improve describecol test for ms date/time

Fri Aug 12 15:33:59 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/data.c:
	- check correct protocol for ms date/time -> binary tests
