@@ -1,3 +1,6 @@
+Thu Sep  1 12:05:29 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* include/tds.h src/tds/net.c: add tds_put_cancel
+
 Thu Sep  1 09:57:34 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/tds/token.c: read data before handling it
 
@@ -789,4 +792,4 @@ Sat Apr  9 16:15:00 EDT 2011	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.91 added because of release
 
 $FreeTDS$
-$Id: ChangeLog,v 1.3387 2011-09-01 07:57:09 freddy77 Exp $
+$Id: ChangeLog,v 1.3388 2011-09-01 10:05:22 freddy77 Exp $
